*V0.2 Release* Added dummy data on startup Added TyreView Significant changes to Raceboard appearance Fixed some cars not getting updated if number of active cars decrease Changed License to GPL V3 Update documentation

--- a/F1RaceBoard/F1GameSessionDisplay.csproj
+++ b/F1RaceBoard/F1GameSessionDisplay.csproj
@@ -71,6 +71,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PersonalLeaderboard.xaml.cs">
+      <DependentUpon>PersonalLeaderboard.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TyreView.xaml.cs">
+      <DependentUpon>TyreView.xaml</DependentUpon>
+    </Compile>
     <Page Include="CarStatusView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -92,6 +98,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PersonalLeaderboard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TyreView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
