--- a/F12020UdpParser/F12020UdpParser.vcxproj
+++ b/F12020UdpParser/F12020UdpParser.vcxproj
@@ -160,12 +160,13 @@
     <ClInclude Include="F12020DataDefs.h" />
     <ClInclude Include="F12020DataDefsClr.h" />
     <ClInclude Include="F12020ElementaryParser.h" />
+    <ClInclude Include="F12020UdpClrMapper.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="F12020ElementaryParser.cpp" />
-    <ClCompile Include="F12020Parser.cpp" />
+    <ClCompile Include="F12020UdpClrMapper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
