Moved UDP Reception out of parser Fixed Bug in Qualifying Laptime of leader Allow data update in visitor mode (no early exit in data processing, when player not present)

--- a/F1RaceBoard/F1GameSessionDisplay.csproj
+++ b/F1RaceBoard/F1GameSessionDisplay.csproj
@@ -78,6 +78,7 @@
     <Compile Include="TyreView.xaml.cs">
       <DependentUpon>TyreView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UdpEventClient.cs" />
     <Page Include="CarStatusView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
