Add feature to exchange Drivername mapping by Contextmenu in Datagrid.

--- a/F1RaceBoard/F1GameSessionDisplay.csproj
+++ b/F1RaceBoard/F1GameSessionDisplay.csproj
@@ -75,6 +75,7 @@
     <Compile Include="PersonalLeaderboard.xaml.cs">
       <DependentUpon>PersonalLeaderboard.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ReflectionClone.cs" />
     <Compile Include="TyreView.xaml.cs">
       <DependentUpon>TyreView.xaml</DependentUpon>
     </Compile>
