--- a/F1RaceBoard/KRF1Timing.csproj
+++ b/F1RaceBoard/KRF1Timing.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{12169BD2-CF99-462B-BA86-FA567B628771}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>F1GameSessionDisplay</RootNamespace>
-    <AssemblyName>F1GameSessionDisplay</AssemblyName>
+    <RootNamespace>adjsw.F12023</RootNamespace>
+    <AssemblyName>Krf1Timing</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,6 +50,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>krf1.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
@@ -173,7 +176,7 @@
   <ItemGroup>
     <ProjectReference Include="..\F12020UdpParser\F12020UdpParser.vcxproj">
       <Project>{d0196828-84b6-4467-aa72-aa368b9df85d}</Project>
-      <Name>F12020UdpParser</Name>
+      <Name>F1Udp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -190,6 +193,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\krf1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="krf1.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
