--- a/KRF1Timing/KRF1Timing.csproj
+++ b/KRF1Timing/KRF1Timing.csproj
@@ -174,7 +174,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\F12020UdpParser\F12020UdpParser.vcxproj">
+    <ProjectReference Include="..\F1Udp\F1Udp.vcxproj">
       <Project>{d0196828-84b6-4467-aa72-aa368b9df85d}</Project>
       <Name>F1Udp</Name>
     </ProjectReference>
