Add new Qualifying Sessions fix recognition for penalties served fix icon not longer shown change Name Mapping with "Enter" on edit field

--- a/KRF1Timing/KRF1Timing.csproj
+++ b/KRF1Timing/KRF1Timing.csproj
@@ -54,6 +54,10 @@
   <PropertyGroup>
     <ApplicationIcon>krf1.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="Razorvine.Pickle, Version=1.5.0.0, Culture=neutral, PublicKeyToken=35192c03a6ef2e20, processorArchitecture=MSIL">
